| Bug #4972 | mysqldump crashes with views | ||
|---|---|---|---|
| Submitted: | 10 Aug 2004 11:57 | Modified: | 26 Sep 2004 16:18 |
| Reporter: | Georg Richter | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: mysqldump Command-line Client | Severity: | S1 (Critical) |
| Version: | 5.0.2 | OS: | Linux (Linux Suse 9.0) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[10 Aug 2004 11:57]
Georg Richter
[13 Aug 2004 15:39]
Alexander Keremidarski
(gdb) bt #0 0x4e3f11e8 in strcmp () from /lib/tls/libc.so.6 #1 0x0804d9ed in check_if_ignore_table (table_name=0x804e801 "MRG_MyISAM") at mysqldump.c:2044 #2 0x0804c12c in dumpTable (numFields=1, table=0x805d874 "vvv") at mysqldump.c:1364 #3 0x0804d446 in dump_all_tables_in_db (database=0xbffffb5d "test") at mysqldump.c:1864 #4 0x0804d0e5 in dump_databases (db_names=0x80564f4) at mysqldump.c:1766 #5 0x0804dbac in main (argc=1, argv=0x80564f4) at mysqldump.c:2101
[24 Sep 2004 7:05]
Oleksandr Byelkin
ChangeSet 1.1686 04/09/24 12:50:10 bell@sanja.is.com.ua +6 -0 new show create view output mysqldump view support (BUG#4972) workaround to allow view work after LOCK TABLES
[26 Sep 2004 16:18]
Oleksandr Byelkin
Thank you for bugreport! Bug is fixed patch is pushed to source repository.
